--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fontsource/manrope": "^5.1.0",
+    "@fontsource/poppins": "^5.1.0",
+    "@fontsource/urbanist": "^5.1.0",
+    "axios": "^1.7.7",
     "flowbite": "^2.5.2",
     "flowbite-react": "^0.10.1",
     "react": "^18.3.1",
