--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fontsource/poppins": "^5.1.0",
     "@fontsource/urbanist": "^5.1.0",
     "axios": "^1.7.7",
+    "crypto-js": "^4.2.0",
     "flowbite": "^2.5.2",
     "flowbite-react": "^0.10.1",
     "react": "^18.3.1",
