--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "crypto-js": "^4.2.0",
     "flowbite": "^2.5.2",
     "flowbite-react": "^0.10.1",
+    "js-cookie": "^3.0.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
