--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "flowbite-react": "^0.10.1",
     "js-cookie": "^3.0.5",
     "react": "^18.3.1",
+    "react-code-input": "^3.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "react-hot-toast": "^2.4.1",
